renamed css classes after closing issue (wontfix) about hidden overflow

--- a/keys.css
+++ b/keys.css
@@ -37,10 +37,10 @@ kbd.eric-btn-dark {
 }
 
 /* Used for overlaying the link hints instead of moving page content around when they appear */
-.overlay-container {
+.LB-overlay-container {
 	position: relative;
 }
-.overlay-hint {
+.LB-overlay-link-hint {
 	position:absolute;
 	top:50%;
 	transform:translateY(-50%)
